slide10-with-add

--- a/css/index.css
+++ b/css/index.css
@@ -28,6 +28,13 @@
 
 @font-face {
     font-family: 'Montserrat';
+    src: local('../font/Montserrat-Regular'), local('../font/Montserrat-Regular'), url('../font/Montserrat-Regular.woff') format('woff'), url('../font/Montserrat-Regular.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Montserrat';
     src: local('../font/Montserrat-Light'), local('../font/Montserrat-Light'), url('../font/Montserrat-Light.woff') format('woff'), url('../font/Montserrat-Light.ttf') format('truetype');
     font-weight: 300;
     font-style: normal;
@@ -40,6 +47,12 @@
     font-style: normal;
 }
 
+@font-face{
+    font-family: 'Roboto';
+    src: local('../font/Roboto-Regular'), local('../font/Roboto-Regular'), url('../font/Roboto-Regular.woff') format('woff'), url('../font/Roboto-Regular.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+}
 html{
     overflow-x: hidden;
 }
@@ -730,7 +743,7 @@ body {
 }
 
 .slide9__text__h3{
-    font-family: 'Raleway';
+    font-family: 'Raleway', sans-serif;
     font-weight: 600;
     color: #555;
     font-size: 30px;
@@ -740,7 +753,7 @@ body {
 .slide9__text__p{
     font-size: 16px;
     color: #8c8c8c;
-    font-family: 'Montserrat';
+    font-family: 'Montserrat', sans-serif;
     font-weight: 300;
     text-align: center;
     margin-top: 40px;
@@ -806,7 +819,7 @@ body {
     border-radius: 4px 4px 0 0;
     background-color: #363636;
     padding: 5px 0;
-    font-family: 'Montserrat';
+    font-family: 'Montserrat', sans-serif;
     font-weight: 300;
     text-align: center;
     font-size: 24px;
@@ -817,7 +830,7 @@ body {
     background-color: #252525;
     font-size: 12px;
     padding: 4px 0;
-    font-family: 'Roboto';
+    font-family: 'Roboto', sans-serif;
     font-weight: 400;
     text-align: center;
     border-radius: 0 0 4px 4px;
@@ -836,7 +849,7 @@ body {
 
 .slide9__pic__text__h3{
     margin-top: 30px;
-    font-family: 'Raleway';
+    font-family: 'Raleway', sans-serif;
     font-weight: 500;
     color: #555;
     font-size: 20px;
@@ -844,14 +857,14 @@ body {
 
 .slide9__pic__text__p{
     margin-top: 20px;
-    font-family: 'Montserrat';
+    font-family: 'Montserrat', sans-serif;
     font-weight: 300;
     font-size: 14px;
     color: #8c8c8c;
 }
 
-.slide9__pic__text_small{
-    font-family: 'Montserrat';
+.slide9__pic__text__span{
+    font-family: 'Montserrat', sans-serif;
     font-weight: 300;
     color: #c7b299;
     font-size: 14px;
@@ -881,6 +894,55 @@ body {
 .slide10__pic__img{
 }
 
+.slide11{
+    height: 510px;
+    background-color: #191919;
+}
+
+.slide11-wrapper{
+    width: 100%;
+    display: flex;
+    border: 1px solid green;
+}
+
+.slide11__logo-column{
+    position: relative;
+    width: 270px;
+    height: 330px;
+}
+
+.slide11__logo-column__img{
+    position: absolute;
+
+}
+
+.slide11__logo-column__h2{
+    position: absolute;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 300;
+    font-size: 34px;
+    color: #fff;
+    left: 65px;
+    top: 7px;
+    margin: 0;
+}
+
+.slide11__logo-column__p{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 300;
+    font-size: 14px;
+    color: #555;
+    margin-top: 80px;
+    margin-bottom: 30px;
+}
+
+.slide11__logo-column__span{
+    border: 1px solid yellow;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    color: #fff;
+}
 
 @media (max-width: 1600px) {
     .slide1-middle{
