--- a/css/index.css
+++ b/css/index.css
@@ -505,14 +505,26 @@ body {
     display: flex;
     flex-direction: column;
     position: relative;
-    margin:20px 0;
+    margin: 20px 0;
+}
+
+.slide5__pic__text:before{
+    content: " ";
+    position: relative;
+    bottom: 28px;
+    left: 0;
+    width: 0;
+    height: 0;
+    border-left: 25px solid transparent;
+    border-right: 25px solid transparent;
+    border-bottom: 15px solid #fbfaf8;
 }
 
 .slide5__pic-wrapper:hover{
     cursor: pointer;
 }
 
-.slide5__pic-wrapper:hover .slide5__pic__triangle{
+.slide5__pic-wrapper:hover .slide5__pic__text:before{
     border-bottom: 15px solid #362f2d;
 }
 
@@ -552,24 +564,12 @@ body {
     background: url(../img/slide5_6.jpg) no-repeat;
 }
 
-.slide5__pic__triangle{
-    position: absolute;
-    bottom: 100px;
-    left: 10px;
-    width: 0;
-    height: 0;
-    border-left: 25px solid transparent;
-    border-right: 25px solid transparent;
-    border-bottom: 15px solid #fbfaf8;
-}
-
 .slide5__pic__text{
     height: 105px;
     background: #fbfaf8;
     width: 340px;
     position: absolute;
     bottom: 0;
-    justify-content: center;
     padding-left: 30px;
 }
 
@@ -578,6 +578,7 @@ body {
     font-weight: 500;
     font-size: 20px;
     color: #c7b299;
+    margin: 5px 0;
 }
 
 .slide5__pic__text__p{
@@ -606,7 +607,7 @@ body {
 
 .slide6__video {
     width: 100%;
-    height: 50vh;
+    height: 50vw;
 }
 
 .slide7{
