--- a/css/index.css
+++ b/css/index.css
@@ -512,7 +512,7 @@ body {
     content: " ";
     position: relative;
     bottom: 28px;
-    left: 0;
+    left: -15px;
     width: 0;
     height: 0;
     border-left: 25px solid transparent;
