--- a/css/index.css
+++ b/css/index.css
@@ -115,6 +115,10 @@ body {
     justify-content: space-around;
 }
 
+.burger-menu {
+    display: none;
+}
+
 .header__nav__a{
     text-decoration: none;
     font-family: 'Montserrat', sans-serif;
@@ -1358,8 +1362,26 @@ body {
         font-size: 25px;
     }
 
-    .header__nav__a{
-        display: none;
+    .header__nav{
+        flex-direction: column;
+        justify-content: center;
+        height: 100vh;
+        width: 30vw;
+        position: fixed;
+        right: -30vw;
+    }
+
+    .burger-menu{
+        display: block;
+        width: 20px;
+        height: 20px;
+        position: absolute;
+        top: 20px;
+        right: 10px;
+    }
+
+    .header__nav.active {
+
     }
 
     .header__icon__img{
